# django-project-template

./: .dockerignore  .editorconfig  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
main/: __init__.py  admin.py  models.py  signals.py  tests.py  urls.py
main/migrations/: 0001_initial.py
misc/: caddyfile.conf
misc/dokku/: CHECKS  Procfile  app.json  uwsgi.ini
project_name/: asgi.py  context_processors.py  middleware.py  settings.py  urls.py  wsgi.py
templates/: base.html  index.html
