[project]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
requires-python = ">=3.8"
dependencies = [
    "django>=2.2",
    "djangoql",
    "django-extensions",
    "django-redis",
    "psycopg2-binary",
    "pytest",
    "pytest-cov",
    "sentry-sdk",
    "shortuuid",
    "unittest-xml-reporting",
    "uwsgi",
    "werkzeug",
    "whitenoise",
]

[tool.uv]
dev-dependencies = [
    "ipython",
    "bpython",
    "pudb",
    "django-stubs",
]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]
